--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.4",
+    "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^5.1.1",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "particlesjs": "^2.2.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0"
   }
 }
